# CAN_Servo

./: .gitignore  README.md
01_Code/can_servo/: CMakeLists.txt
01_Code/can_servo/include/: CAN_endpoints.h  all_includes.h  can_servo.h  endpoints.h  led_strip_driver.h  mp6550.h  pinout.h  servo.h  servo_info.h
01_Code/can_servo/include/drivers/: can_servo.h  led_strip_driver.h  mp6550.h
01_Code/can_servo/include/interpolators/: stepped_interpolator.h
01_Code/can_servo/include/supporting/: get_shortest_angle.h  running_average.h
01_Code/can_servo/include/tasks/: can_bus_task.h  drive_motor_task.h  led_strip_driver_task.h  read_current_task.h  read_position_task.h  read_temperature_task.h
01_Code/can_servo/main/: CMakeLists.txt  can_servo.cpp  endpoints.cpp  idf_component.yml  led_strip_driver.cpp  main.cpp  mp6550.cpp  servo.cpp
01_Code/can_servo/main/drivers/: can_servo.cpp  led_strip_driver.cpp  mp6550.cpp
01_Code/can_servo/main/interpolators/: stepped_interpolator.cpp
01_Code/can_servo/main/supporting/: endpoints.cpp  get_shortest_angle.cpp  running_average.cpp
01_Code/can_servo/main/tasks/: can_bus_task.cpp  drive_motor_task.cpp  led_strip_driver_task.cpp  read_current_task.cpp  read_position_task.cpp  read_temperature_task.cpp
99_Old/Code/ServoController_Testboard/: platformio.ini
99_Old/Tools/: ServoConfig.py
Code/ServoController_Testboard/src/: main.cpp
